Use the geeko as the OpenSUSE logo to circumvent unreadably small logo text (also used this way on software.opensuse.org, opensuse wiki, etc.), fix buggy CSS rule in all variants
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@4135 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/suse/daps2013/static/css/style.css
+++ b/suse/daps2013/static/css/style.css
@@ -128,7 +128,7 @@ html, body {
     height: 38px;
 }
 
-#_logo > img {
+#_logo img {
     width: 103px;
     height: 38px;
     color: #3465A4;
