--- a/suse/opensuse2013/static/css/brand.css
+++ b/suse/opensuse2013/static/css/brand.css
@@ -1,12 +1,13 @@
 #_logo {
-    margin: 25px 22px 25px 10px !important;
+    margin: 40px 22px 9px 10px !important;
 }
 
-#_logo > img {
-	height: 45px;
-	width: auto;
+#_logo img {
+	height: 28px;
+	width: 55px;
 }
 
 #_header .crumbs {
-	margin-left: 130px;
+	margin-left: 100px;
 }
+
