--- a/suse/suse2013/static/css/style.css
+++ b/suse/suse2013/static/css/style.css
@@ -128,7 +128,7 @@ html, body {
     height: 38px;
 }
 
-#_logo > img {
+#_logo img {
     width: 81px;
     height: 38px;
     color: #439239;
